Fix the modals being too high. Closes #1664

--- a/webroot/styles/app.css
+++ b/webroot/styles/app.css
@@ -357,7 +357,6 @@ header {
   width: 50%;
   overflow: hidden;
   box-sizing: border-box;
-  top: -15%;
 }
 .modal__close {
   background: transparent;
